footer links fixed

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,9 +1,9 @@
 <footer class="site-footer w-100">
   <div class="f-info">
     <div class="f-info-socials">
-      <i class="fa-brands fa-square-facebook"></i>
-      <i class="fa-brands fa-instagram"></i>
-      <i class="fa-brands fa-linkedin"></i>
+      <a href="listings/facebook"><i class="fa-brands fa-square-facebook"></i></a>
+      <a href="listings/instagram"><i class="fa-brands fa-instagram"></i></a>
+      <a href="listings/linkedin"><i class="fa-brands fa-linkedin"></i></a>
     </div>
 
     <div class="f-info-brand">
@@ -11,8 +11,8 @@
     </div>
 
     <div class="f-info-links">
-      <a href="/privacy">Privacy</a>
-      <a href="/terms">Terms</a>
+      <a href="listings/privacy">Privacy</a>
+      <a href="listings/terms">Terms</a>
     </div>
   </div>
 </footer>
