--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,9 +1,9 @@
 <footer class="site-footer w-100">
   <div class="f-info">
     <div class="f-info-socials">
-      <a href="listings/facebook"><i class="fa-brands fa-square-facebook"></i></a>
-      <a href="listings/instagram"><i class="fa-brands fa-instagram"></i></a>
-      <a href="listings/linkedin"><i class="fa-brands fa-linkedin"></i></a>
+      <div class="facebook"><a href="listings/facebook"><i class="fa-brands fa-square-facebook"></i></a></div>
+      <div class="instagram"><a href="listings/instagram"><i class="fa-brands fa-instagram"></i></a></div>
+      <div class="linkedin"><a href="listings/linkedin"><i class="fa-brands fa-linkedin"></i></a></div>
     </div>
 
     <div class="f-info-brand">
